# Calc-Projects

./: .clang-format  .gitignore  .gitlab-ci.yml  404d51ec9a1fb94b.sol  CMakeLists.txt  README.md  SimpleCalc  build.sh  local_tester.sh  run_tests.sh
0_Common/: CMakeLists.txt  SimpleCalc.c  build.sh
0_Common/include/header-files/: args.h  calc.h  default_case.h  ec_operations1.h  ec_operations2.h  ec_operations3.h  ec_operations4.h  error_handling.h  error_msg.h  handle_args.h  io_32.h  magic_num.h  math_operations.h  operations_32.h  signed_ec_operations.h  signed_math_operations.h  unsigned_ec_operations.h  unsigned_math_operations.h
0_Common/references/: CMakeLists.txt
0_Common/src/source-files/: SimpleCalc  SimpleCalc.c  a.out  args.c  calc.c  default_case.c  ec_operations1.c  ec_operations2.c  ec_operations3.c  ec_operations4.c  error_handling_32.c  error_msg.c  handle_args.c  io_32.c  math_operations.c  operations_32.c  signed_ec_operations.c  signed_math_operations.c  unsigned_ec_operations.c  unsigned_math_operations.c
1_SimpleCalc/: CMakeLists.txt  SimpleCalcTests.py
1_SimpleCalc/hdrs/: README.md
1_SimpleCalc/include/header-files/: calc.h  error_msg.h  math_operations.h  simplecalc_main.h
1_SimpleCalc/references/: CMakeLists.txt
1_SimpleCalc/src/source-files/: SimpleCalc.c  args.c  calc.c  error_msg.c  math_operations.c  simplecalc_main.c
2_FileCalc/: CMakeLists.txt
2_FileCalc/include/header-files/: debug.h  default_case64.h  equation_types.h  error_msg_64.h  filecalc.h  filecalc_main.h  font.h  open_output_dir.h  parse_solved_file.h  parse_unsolved_file.h  return_solved_struct.h  return_unsolved_struct.h  reverse_byte_string_order.h  signed_ec_operations_64.h  signed_math_operations_64.h  unsigned_ec_operations_64.h  unsigned_math_operations_64.h
2_FileCalc/references/: CMakeLists.txt
2_FileCalc/src/source-files/: default_case64.c  error_msg_64.c  filecalc.c  filecalc_main.c  open_output_dir.c  parse_solved_file.c  parse_unsolved_file.c  return_solved_struct.c  return_unsolved_struct.c  reverse_byte_string_order.c  signed_ec_operations_64.c  signed_math_operations_64.c  unsigned_ec_operations_64.c  unsigned_math_operations_64.c
3_DataStructures1/: CMakeLists.txt  README.md
3_DataStructures1/hdrs/: hash_table.h  linked_list.h  queue.h  queue_p.h  stack.h
3_DataStructures1/include/: hash_table.h  linked_list.h  queue.h  queue_p.h  stack.h
3_DataStructures1/src/: linked_list.c
3_DataStructures1/tests/: hash_table_tests.c  linked_list_tests.c  queue_p_tests.c  queue_tests.c  stack_tests.c
3_DataStrucures1/: CMakeLists.txt  README.md
3_DataStrucures1/include/: linked_list.h  queue.h  queue_p.h  stack.h
3_DataStrucures1/tests/: linked_list_tests.c  queue_p_tests.c  queue_tests.c
4_FileChoiceCalc/: README.md
4_ThreadCalc/: CMakeLists.txt
4_ThreadCalc/include/: signals.h
4_ThreadCalc/references/: CMakeLists.txt
4_ThreadCalc/tests_src/: thread_tests.cmake
5_NetCalc/: DRAFT
5_NetCalc/client/: client.py
FileCalc/: CMakeLists.txt  FileSpec.tex  README.md  build.sh  filecalc.tex
FileCalc/hdrs/: filecalc.h  the_maths.h
FileCalc/references/: FileSpec.tex
FileCalc/src/: filecalc.c  the_maths.c
FileCalc/starter_code/: file-calc.h
FileChoiceCalc/: file-choice-calc.tex  file-proto.h
GeneratorsGraders/FileCalc/: .gitignore  FileCalc_Generator.py  FileCalc_Grader.py  README.md  file_generator_new.py  grader.py  notes
SimpleCalc/: simplecalc.tex
Solutions/: 355639e04a852490.sol  404d51ec9a1fb94b.sol  90df857ac5a15a4a.sol
Tests/: DataStructures1Tests.py  EquGrader.py  FileCalcTests.py  NetCalcTests.py  SimpleCalcTests.py  ThreadCalcTests.py
tests/: DataStructures1Tests.py  FileCalcTests.py  README.md  SimpleCalcTests.py
